# ghost-type

ghosttype/: IMPLEMENTATION_PROGRESS.md  README.md  main.py  pyproject.toml
ghosttype/bridges/: __init__.py  organisely.py  servers.py
ghosttype/cli/: bridge.py  config.py  context.py  daemon.py  debug.py  desktop.py  history.py  keyd.py  main.py  ocr.py  providers.py  service.py  ui.py  utils.py
ghosttype/config/: config.toml.template
ghosttype/core/: config.py  errors.py  registry.py
ghosttype/ghosttype/: cli.py
ghosttype/ghosttype_desktop/: app.py
ghosttype/ghosttype_desktop/audio/: recorder.py  vad.py  wav.py
ghosttype/ghosttype_desktop/context/: __init__.py  active_window.py  clipboard.py  last_output.py  manager.py  screenshot_ocr.py  selected_text.py  vocabulary.py
ghosttype/ghosttype_desktop/desktop/: base.py  generic.py  gnome_extension.py  gnome_wayland.py  kde_wayland.py  portal.py  registry.py  wlroots.py  x11.py
ghosttype/ghosttype_desktop/history/: __init__.py  chunks.py
ghosttype/ghosttype_desktop/input/: __init__.py  evdev.py  keyd.py  ui_button.py
ghosttype/ghosttype_desktop/output/: __init__.py  injector.py
ghosttype/ghosttype_desktop/ui/: app.py  (+1 more)
ghosttype/keyd/: ghosttype.conf
ghosttype/policy/: __init__.py  command_safety.py  engine.py  privacy.py  sensitive_apps.py
ghosttype/ramblerouter/: __init__.py  complexity.py  local_commands.py  prompts.py  router.py  schema.py  streaming.py  streaming_architecture.py  task_executor.py
ghosttype/systemd/: ghosttype.service
ghosttype/tests/: test_router.py  test_streaming.py
(+14 files in other folders)
