[project]
name = "ghosttype"
version = "0.1.0"
description = "Linux Desktop Assistant Runtime"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "tomlkit",
    "httpx",
    "platformdirs",
    "sounddevice",
    "numpy",
    "groq",
    "openai",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
ghosttype = "ghosttype.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
